[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyloggy"
version = "0.1.0"
description = "Tiny colored logger"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sam Bines" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyloggy*"]
